--- a/source/css/designs/design-snow.css
+++ b/source/css/designs/design-snow.css
@@ -31,13 +31,6 @@
     padding: 0.3em 0.5em;
 }
 
-.pwdesign-white-smoke .pw-bar-fixed .power-toggle {
-    margin-right: 0;
-}
-/*.pwdesign-white-smoke .pw-bar-fixed.pw-vertical .power-toggle {
-    margin-right: 0;
-}*/
-
 .pwdesign-white-smoke  .pw-bar-fixed {
     width: 100%;
     z-index: 1000;
